--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/element-ui/2.5.4/theme-chalk/index.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/animate/3.5.2/animate.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/index.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/iconfont.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.0/index.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.10/index.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Avuex 通用管理 系统快速开发框架</title>
