获取用户列表

--- a/public/index.html
+++ b/public/index.html
@@ -93,8 +93,8 @@
                 </div>
             </div>
             <div class="avue-home__footer">
-                <a href="https://gitee.com/smallweigit/avue" target="_blank">
-                    https://gitee.com/smallweigit/avue </a>
+                <!-- <a href="https://gitee.com/smallweigit/avue" target="_blank">
+                    https://gitee.com/smallweigit/avue </a> -->
             </div>
         </div>
     </div>
