--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.0/index.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.10/index.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Avuex 通用管理 系统快速开发框架</title>
+    <title>AsGiant-站在巨人的肩膀上</title>
     <style>
         html,
         body,
