--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/iconfont.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/index.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.10/index.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>cdn/jsoneditor/jsoneditor.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>AsGiant-站在巨人的肩膀上</title>
     <style>
@@ -105,6 +106,7 @@
     <script src="<%= BASE_URL %>cdn/axios/1.0.0/axios.min.js" charset="utf-8"></script>
     <script src="<%= BASE_URL %>cdn/element-ui/2.5.4/index.js" charset="utf-8"></script>
     <script src="<%= BASE_URL %>cdn/avuex/1.0.10/avue.min.js" charset="utf-8"></script>
+    <script src="<%= BASE_URL %>cdn/jsoneditor/jsoneditor-minimalist.min.js"></script>
 </body>
 
 </html>
